--- a/frontend/src/assets/css/global-styles.scss
+++ b/frontend/src/assets/css/global-styles.scss
@@ -37,3 +37,12 @@ body::-webkit-scrollbar {
     /* Invisible Scrollbar */
     display: none;
 }
+
+.unselectable {
+  -webkit-user-select: none; /* Chrome/Safari */ 
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+
+  -o-user-select: none;
+  user-select: none;
+}
