platform list color and padding adjustment

--- a/frontend/src/assets/css/mixin-presets.scss
+++ b/frontend/src/assets/css/mixin-presets.scss
@@ -33,7 +33,7 @@
         }
 
         .platform-option-container{
-            padding: 10px 0 10px 0!important;
+            padding: 15px 0 15px 0!important;
         }
 
         .platform-icon {
@@ -57,6 +57,10 @@
             width: 30px!important;
             height: 30px!important;
             font-size: 30px!important;
+        }
+
+        .platform-option-container{
+            padding: 10px 0 10px 0!important;
         }
     }
 
