Header color adjustments

--- a/frontend/src/assets/css/common-variables.scss
+++ b/frontend/src/assets/css/common-variables.scss
@@ -7,4 +7,5 @@ $background-color-landing-header: rgb(2 1 0 / 0.3);
 
 // Transitions
 $transition-landing-header-darken: background-color 0.5s ease-in-out;
+$transition-landing-header-color: color 0.5s ease-in-out;
 $transition-landing-header-hover-text: color 0.15s ease-in-out;
