Added members overlay, design updates and minor fixes, refactoring to store variables, etc.

--- a/frontend/src/assets/css/mixin-presets.scss
+++ b/frontend/src/assets/css/mixin-presets.scss
@@ -1,5 +1,20 @@
 @import '@/assets/css/common-variables';
 
+@mixin fade-transition-preset {
+    .fade-enter-active {
+        transition: all 0.5s ease-in-out;
+    }
+    
+    .fade-leave-active {
+        transition: all 0.5s ease-in-out;
+    }
+    
+    .fade-enter-from,
+    .fade-leave-to {
+        opacity: 0;
+    }
+}
+
 // Landing page overlay platform list preset
 @mixin landing-dynamic-sizes {
     &.iv-platform-table {
