--- a/frontend/src/assets/css/common-variables.scss
+++ b/frontend/src/assets/css/common-variables.scss
@@ -1,11 +1,19 @@
 
 // Colors
-$primary-color: #FF7000;
+$primary-color: #FFFFFF;
 
 // Background-colors
 $background-color-landing-header: rgb(2 1 0 / 0.3);
 
 // Transitions
 $transition-landing-header-darken: background-color 0.5s ease-in-out;
-$transition-landing-header-color: color 0.5s ease-in-out;
-$transition-landing-header-hover-text: color 0.15s ease-in-out;
+$transition-landing-header-font-color: color 0.15s ease-in-out;
+
+// Z-index
+$z-over-header: 10000;
+$z-header: 9999;
+$z-under-header: 9998;
+
+$z-over-content: 1000;
+$z-content: 999;
+$z-under-content: 998;
