Add prettier script and format all files

--- a/src/assets/css/common-variables.scss
+++ b/src/assets/css/common-variables.scss
@@ -1,6 +1,5 @@
-
 // Colors
-$primary-color: #FFFFFF;
+$primary-color: #ffffff;
 
 // Background-colors
 $background-color-landing-header: rgb(2 1 0 / 0.3);
