--- a/src/assets/css/global-styles.scss
+++ b/src/assets/css/global-styles.scss
@@ -1,6 +1,6 @@
-@import "https://fonts.googleapis.com/css?family=Raleway:900,800,700,600,400,300,200,100";
-@import "https://fonts.googleapis.com/css?family=Josefin+Sans:700,600,400";
-@import "https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap";
+@import 'https://fonts.googleapis.com/css?family=Raleway:900,800,700,600,400,300,200,100';
+@import 'https://fonts.googleapis.com/css?family=Josefin+Sans:700,600,400';
+@import 'https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap';
 
 *,
 *::after,
@@ -9,37 +9,37 @@
 }
 
 html {
-    /* Fit to Screen */
-    max-width: 100vw;
-    width: 100%;
+  /* Fit to Screen */
+  max-width: 100vw;
+  width: 100%;
 
-    margin: 0 0;
-    padding: 0 0;
+  margin: 0 0;
+  padding: 0 0;
 
-    overflow-x: hidden;
+  overflow-x: hidden;
 
-    /*for smooth scrolling, when redirected to different parts of the page via ie: a button*/
-    scroll-behavior: smooth;
+  /*for smooth scrolling, when redirected to different parts of the page via ie: a button*/
+  scroll-behavior: smooth;
 }
 
 body {
-    max-width: 100vw;
-    width: 100%;
-  
-    margin: 0 0;
-    padding: 0 0;
+  max-width: 100vw;
+  width: 100%;
 
-    overflow-x: hidden;
-    // overflow-y:scroll;
+  margin: 0 0;
+  padding: 0 0;
+
+  overflow-x: hidden;
+  // overflow-y:scroll;
 }
 
 body::-webkit-scrollbar {
-    /* Invisible Scrollbar */
-    display: none;
+  /* Invisible Scrollbar */
+  display: none;
 }
 
 .unselectable {
-  -webkit-user-select: none; /* Chrome/Safari */ 
+  -webkit-user-select: none; /* Chrome/Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+ */
 
