Begin draft of discography page

--- a/src/assets/css/common-variables.scss
+++ b/src/assets/css/common-variables.scss
@@ -1,6 +1,11 @@
 // Colors
 $primary-color: #ffffff;
 
+$primary-text-color: #ffffff;
+
+$iv-white: #ffffff;
+$iv-dark-grey: #222222;
+
 // Background-colors
 $background-color-landing-header: rgb(2 1 0 / 0.3);
 
