--- a/src/assets/css/common-variables.scss
+++ b/src/assets/css/common-variables.scss
@@ -4,6 +4,8 @@ $primary-color: #ffffff;
 $primary-text-color: #ffffff;
 
 $iv-white: #ffffff;
+$iv-black: #000000;
+$iv-near-black: #111111;
 $iv-dark-grey: #222222;
 
 // Background-colors
