--- a/src/assets/css/common-styles.scss
+++ b/src/assets/css/common-styles.scss
@@ -9,3 +9,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+.unselectable-text {
+  user-select: none;
+
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+}
