Begin on publication page, fix bug in landing header losing color after menu opens and closes

--- a/src/assets/css/common-variables.scss
+++ b/src/assets/css/common-variables.scss
@@ -7,6 +7,7 @@ $iv-white: #ffffff;
 $iv-black: #000000;
 $iv-near-black: #111111;
 $iv-dark-grey: #222222;
+$iv-youth-blue: #416492;
 
 // Background-colors
 $background-color-landing-header: rgb(2 1 0 / 0.3);
