--- a/src/assets/css/common-variables.scss
+++ b/src/assets/css/common-variables.scss
@@ -7,7 +7,8 @@ $iv-white: #ffffff;
 $iv-black: #000000;
 $iv-near-black: #111111;
 $iv-dark-grey: #222222;
-$iv-youth-blue: #4179b2; // #416492
+$iv-youth-blue: #4179b2;
+$iv-youth-blue-depressed: #416492;
 
 // Background-colors
 $background-color-landing-header: rgb(2 1 0 / 0.3);
