--- a/src/assets/css/styles/publication.scss
+++ b/src/assets/css/styles/publication.scss
@@ -61,7 +61,7 @@
   .grid-img-container {
     width: 100%;
 
-    margin: 50px 0 20px 0;
+    margin: 0 0 20px 0;
 
     display: grid;
     grid-gap: 15px;
@@ -160,10 +160,10 @@
 
 @media (max-width: 599px) {
   .iv-page {
-    padding: 100px 25px 100px 25px;
+    padding: 80px 25px 80px 25px;
 
     .full-width-img {
-      margin: 15px 0 15px 0;
+      margin: 0 0 15px 0;
     }
 
     .img-caption {
