Update naming of collapsible content, add new images, add content to publications, edit content in publications

--- a/src/assets/css/styles/publication.scss
+++ b/src/assets/css/styles/publication.scss
@@ -35,15 +35,19 @@
   }
 }
 
-.hidden-content-toggler {
+.toggle-expand-content-icon {
   margin: 0 0 0 5px;
 
   color: $iv-near-white;
   cursor: pointer;
 }
 
-.collapsible-text {
+.expandable-text {
   color: $iv-near-white;
+}
+
+.album-text-link {
+  font-style: italic;
 }
 
 .publication {
